Fixed layout for product page, as picture overlaps text in mobile layout. Made row for price and add to cart be at the bottom.

--- a/WebshopFrontend/wwwroot/app.css
+++ b/WebshopFrontend/wwwroot/app.css
@@ -101,15 +101,10 @@ footer {
 
 .nav-item {
     display: flex;
-    /* flex-direction: row; */
-    /* float: left; */
-    /* padding: 10px; */
 }
 
 .nav-item-static {
     display: flex;
-    /* float: right; */
-    /* padding: 10px; */
     background-color: #4a758b;
 }
 
@@ -127,7 +122,6 @@ li.nav-item:hover {
 .nav-item a.active {
     /*    background-color: rgba(255, 255, 255, 0.37);*/
     font-weight: bold;
-    /*    color: greenyellow;*/
     color: lightgray;
 }
 
@@ -156,8 +150,6 @@ li.nav-item:hover {
 }
 
 .main {
-    /*    display: flex;
-    flex-display: row;*/
     padding: 20px;
 }
 
@@ -187,7 +179,6 @@ li.nav-item:hover {
     width: 100%;
     padding: 5px;
     justify-content: space-between;
-/*    margin: 5px 0;*/
     flex-wrap: wrap;
 }
 
@@ -200,7 +191,6 @@ li.nav-item:hover {
         max-width: 100%;
         max-height: 100%;
         object-fit: contain;
-/*        margin-bottom: 5px;*/
     }
 
 .product-preview-price {
@@ -213,9 +203,13 @@ li.nav-item:hover {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-/*    margin: 5px 0;*/
     border: 1px solid #333;
     background-color: whitesmoke;
+}
+
+.product-page-row-end {
+/*    display: flex;*/
+    align-items: end;
 }
 
 .product-page-image {
@@ -223,7 +217,6 @@ li.nav-item:hover {
     max-height: 450px;
     margin: 15px;
     justify-content: center;
-    align-items: start;
 }
 
     .product-page-image img {
@@ -236,15 +229,15 @@ li.nav-item:hover {
     display: flex;
     flex-direction: column;
     padding: 10px;
-/*    border: 1px solid #333;
-    background-color: whitesmoke;*/
     width: 100%;
+    justify-content: space-between;
 }
 
-.product-preview-price {
+.product-page-price {
     font-size: 1.5em;
     justify-content: end;
     margin-bottom: 5px;
+/*    align-items: end;*/
 }
 
 footer div.row {
@@ -307,9 +300,7 @@ footer a {
         margin: 5px 0;
     }
 
-/*    footer div.row {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-    }*/
+    .product-page-image {
+        align-items: start;
+    }
 }
